force-app/segments/main/default/objects/Demo_DMO_Individual__c/Demo_DMO_Individual__c.object-meta.xml
<CustomObject>
    <label>Individual</label>
    <nameField>
        <displayFormat>IND-{00000000}</displayFormat>
        <label>Individual ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Individuals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>