force-app/segments/main/default/objects/Demo_DMO_Individual__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>IF(ISBLANK(Date_of_Birth__c), null, FLOOR((TODAY() - Date_of_Birth__c) / 365.25))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>