force-app/segments/main/default/objects/Demo_DMO_Individual__c/fields/Consent_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Consent_Marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consent Marketing</label>
    <type>Checkbox</type>
</CustomField>