force-app/segments/main/default/objects/Demo_DMO_Individual__c/fields/Consent_Sms__c.field-meta.xml
<CustomField>
    <fullName>Consent_Sms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consent SMS</label>
    <type>Checkbox</type>
</CustomField>