force-app/segments/main/default/objects/Demo_DMO_Individual__c/fields/Custom_Attributes__c.field-meta.xml
<CustomField>
    <fullName>Custom_Attributes__c</fullName>
    <label>Custom Attributes (JSON)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>