force-app/segments/main/default/objects/Demo_DMO_Individual__c/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Female</fullName><default>false</default><label>Female</label></value>
            <value><fullName>Male</fullName><default>false</default><label>Male</label></value>
            <value><fullName>Non-binary</fullName><default>false</default><label>Non-binary</label></value>
            <value><fullName>Prefer not to say</fullName><default>false</default><label>Prefer not to say</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>