force-app/segments/main/default/objects/Demo_DMO_Individual__c/fields/Household_Income__c.field-meta.xml
<CustomField>
    <fullName>Household_Income__c</fullName>
    <label>Household Income</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>