force-app/segments/main/default/objects/Demo_DMO_Individual__c/fields/Lifecycle_Stage__c.field-meta.xml
<CustomField>
    <fullName>Lifecycle_Stage__c</fullName>
    <label>Lifecycle Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Prospect</fullName><default>false</default><label>Prospect</label></value>
            <value><fullName>New</fullName><default>false</default><label>New</label></value>
            <value><fullName>Active</fullName><default>false</default><label>Active</label></value>
            <value><fullName>Lapsed</fullName><default>false</default><label>Lapsed</label></value>
            <value><fullName>Churned</fullName><default>false</default><label>Churned</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>