force-app/segments/main/default/objects/Demo_DMO_Individual__c/fields/Ltv__c.field-meta.xml
<CustomField>
    <fullName>Ltv__c</fullName>
    <label>LTV</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>