force-app/segments/main/default/objects/Demo_DMO_Individual__c/fields/Preferred_Channel__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Channel__c</fullName>
    <label>Preferred Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Email</fullName><default>false</default><label>Email</label></value>
            <value><fullName>SMS</fullName><default>false</default><label>SMS</label></value>
            <value><fullName>Push</fullName><default>false</default><label>Push</label></value>
            <value><fullName>Phone</fullName><default>false</default><label>Phone</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>