force-app/segments/main/default/objects/Demo_DMO_Individual__c/fields/Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier__c</fullName>
    <label>Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Bronze</fullName><default>false</default><label>Bronze</label></value>
            <value><fullName>Silver</fullName><default>false</default><label>Silver</label></value>
            <value><fullName>Gold</fullName><default>false</default><label>Gold</label></value>
            <value><fullName>Platinum</fullName><default>false</default><label>Platinum</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>