force-app/segments/main/default/objects/Demo_DMO_Individual__c/fields/Vertical_Tags__c.field-meta.xml
<CustomField>
    <fullName>Vertical_Tags__c</fullName>
    <label>Vertical Tags</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>FINS-Banking</fullName><default>false</default><label>FINS - Banking</label></value>
            <value><fullName>FINS-Wealth</fullName><default>false</default><label>FINS - Wealth</label></value>
            <value><fullName>FINS-Insurance</fullName><default>false</default><label>FINS - Insurance</label></value>
            <value><fullName>FINS-AssetMgmt</fullName><default>false</default><label>FINS - Asset Mgmt</label></value>
            <value><fullName>Healthcare</fullName><default>false</default><label>Healthcare</label></value>
            <value><fullName>Retail</fullName><default>false</default><label>Retail</label></value>
            <value><fullName>Onboarding</fullName><default>false</default><label>Onboarding</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>